# ai-dm

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
assets/rules/: dnd5e_class_features.json  dnd5e_items.json  dnd5e_reference.md  dnd5e_spells.json  dnd5e_starting_kits.json  house_rules.json
assets/srd5_2/: monsters.json  progression.json  spells.json
campaigns/ArmyOfTheDamned/: README.md  armyofthedamned.txt  assets_manifest.md  campaign.yaml  voices.json
campaigns/morgana/: campaign.yaml
config/: logging.yaml  models.yaml  settings.yaml
data/saves/: campaign_state.json  current_session.json
foundry/module/: module.json
foundry/payload_examples/: actor_moved.json  apply_damage.json  apply_healing.json  apply_temp_hp.json  area_of_effect_template.json  attune_item.json  break_concentration.json  chat_roll.json  clear_condition.json  concentration_save.json  create_journal.json  death_save.json  declare_reaction.json  drop_item.json  end_attunement.json  equip_item.json  gain_currency.json  give_item.json  grapple.json  hide.json  long_rest.json  move_actor_partial.json  move_actor_to.json  move_token.json  narration_push.json  opportunity_attack.json  player_input.json  player_intent_attack.json  player_intent_end_turn.json  player_intent_skill.json  (+22 more)
scripts/: export_save.py  import_foundry_content.py  reset_state.sh  run_dev.sh  run_foundry_replay.py  send_test_command.py  send_test_command2.py  sync_foundry_assets.py  validate_assets.py
tools/: parse_srd_monsters.py  parse_srd_progression.py  parse_srd_spells.py  sdr_scraper.py
(+460 files in other folders)
