[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dm"
version = "0.1.0"
description = "Hybrid AI + Foundry VTT dungeon master framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0.1",
    "websockets>=12.0",
    "openai>=1.40",
    "edge-tts>=6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
# Optional local speech-to-text (used as a fallback when no
# OPENAI_API_KEY is set). Install with: pip install ai-dm[stt]
stt = [
    "faster-whisper>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
